// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the numbers the Fitness hub shows now a woman, same body, same goal 1`] = `
{
  "bmr": 1533,
  "calorieTarget": 1901,
  "hasMetrics": true,
  "macros": {
    "carbG": 191,
    "fatG": 63,
    "proteinG": 143,
  },
  "missing": [],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": 2376,
}
`;

exports[`the numbers the Fitness hub shows now athletic, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2930,
    "hasMetrics": true,
    "macros": {
      "carbG": 393,
      "fatG": 91,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2336,
    "hasMetrics": true,
    "macros": {
      "carbG": 285,
      "fatG": 73,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2633,
    "hasMetrics": true,
    "macros": {
      "carbG": 339,
      "fatG": 82,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2039,
    "hasMetrics": true,
    "macros": {
      "carbG": 233,
      "fatG": 63,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3228,
    "hasMetrics": true,
    "macros": {
      "carbG": 447,
      "fatG": 100,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now buildMuscle, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 3282,
    "hasMetrics": true,
    "macros": {
      "carbG": 450,
      "fatG": 98,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2616,
    "hasMetrics": true,
    "macros": {
      "carbG": 329,
      "fatG": 78,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2949,
    "hasMetrics": true,
    "macros": {
      "carbG": 389,
      "fatG": 88,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2283,
    "hasMetrics": true,
    "macros": {
      "carbG": 268,
      "fatG": 68,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3615,
    "hasMetrics": true,
    "macros": {
      "carbG": 511,
      "fatG": 108,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now fatLoss, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2380,
    "hasMetrics": true,
    "macros": {
      "carbG": 274,
      "fatG": 79,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1869,
    "hasMetrics": true,
    "macros": {
      "carbG": 185,
      "fatG": 62,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2106,
    "hasMetrics": true,
    "macros": {
      "carbG": 226,
      "fatG": 70,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1631,
    "hasMetrics": true,
    "macros": {
      "carbG": 143,
      "fatG": 54,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2678,
    "hasMetrics": true,
    "macros": {
      "carbG": 326,
      "fatG": 89,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now leanDefine, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2491,
    "hasMetrics": true,
    "macros": {
      "carbG": 292,
      "fatG": 77,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1985,
    "hasMetrics": true,
    "macros": {
      "carbG": 199,
      "fatG": 62,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2238,
    "hasMetrics": true,
    "macros": {
      "carbG": 244,
      "fatG": 70,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1733,
    "hasMetrics": true,
    "macros": {
      "carbG": 154,
      "fatG": 54,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2743,
    "hasMetrics": true,
    "macros": {
      "carbG": 337,
      "fatG": 85,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now sex "other", which the formula now refuses rather than resolves 1`] = `
{
  "bmr": null,
  "calorieTarget": null,
  "hasMetrics": true,
  "macros": null,
  "missing": [
    "sex",
  ],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": null,
}
`;
